# src/models/interface/type.interface.ts
@@ -1,34 +1,17 @@
-export interface FeeConfigResponse {
-    status?: string;
-    error?: string;
-}
-
-export interface FeeComputationResponse {
-    AppliedFeeID: string;
-    AppliedFeeValue: number;
-    ChargeAmount: number,
-    SettlementAmount: number,
+export interface PaymentSlitResponse {
+    ID: number;
+    Balance: number;
+    SplitBreakdown: Array<SplitBreakdown>,
     Error?: string;
 }
 
-export interface PaymentData {
-    ID: number,
+export interface SplitBreakdown {
     Amount: number,
-    Currency: string,
-    CurrencyCountry: string,
-    Customer: {
-        ID: string,
-        EmailAddress: string,
-        FullName: string,
-        BearsFee: boolean
-    },
-    PaymentEntity: {
-        ID: number,
-        Issuer: string,
-        Brand: string,
-        Number: string,
-        SixID: number,
-        Type: string,
-        Country: string
-    }
+    SplitEntityId: string
+}
+
+export interface SplitInfo {
+    SplitType: 'FLAT' | 'RATIO' | 'PERCENTAGE',
+    SplitValue: number,
+    SplitEntityId: string
 }
