# src/routes/feeRoute.ts
@@ -1,9 +1,0 @@
-import express, { Router } from 'express';
-import handler from '../controllers/feeController'
-
-const router: Router = express.Router();
-
-router.post('/fees', handler.feeConfigurationSetup)
-router.post('/compute-transaction-fee', handler.transactionFeeComputation)
-
-export default router;
